--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "moment": "~2.10.3",
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "angular-slick": "~0.2.1",
+    "slick-carousel": "~1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
