--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,10 @@
     "angular": "~1.4.0",
     "ionicons": "~2.0.1",
     "angular-slick": "~0.2.1",
-    "slick-carousel": "~1.5.8"
+    "slick-carousel": "~1.5.8",
+    "ngReact": "~0.1.7",
+    "react": "~0.13.3",
+    "ngInfiniteScroll": "1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
