--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "mangaRai",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express"    : "~4.7.2",
+    "mongoose"   : "~3.6.2",
+    "morgan"     : "~1.2.2",
+    "body-parser": "~1.5.2",
+    "method-override": "~2.1.2"
+  },
+  "main": "server.js",
   "scripts": {
     "test": "gulp test"
   },
