--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "slick-carousel": "~1.5.8",
     "ngReact": "~0.1.7",
     "react": "~0.13.3",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "angular-swiper": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
