--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "mangaRai",
   "version": "0.0.0",
   "dependencies": {
-    "express"    : "~4.7.2",
-    "mongoose"   : "~3.6.2",
-    "morgan"     : "~1.2.2",
-    "body-parser": "~1.5.2",
-    "method-override": "~2.1.2"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.5.2",
+    "express": "^4.7.4",
+    "method-override": "~2.1.2",
+    "mongoose": "^3.6.20",
+    "morgan": "^1.2.3"
   },
   "main": "server.js",
   "scripts": {
